--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/react": "^1.6.21",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
+    "gatsby-image": "^2.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-sharp": "^2.9.0",
