--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gatsby-remark-images": "^3.6.0",
     "gatsby-source-filesystem": "^2.6.1",
     "gatsby-transformer-sharp": "^2.7.0",
+    "mdx-utils": "^0.2.0",
+    "prism-react-renderer": "^1.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.2.1"
