--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-remark-images": "^3.6.0",
     "gatsby-source-filesystem": "^2.6.1",
+    "gatsby-transformer-remark": "^2.12.0",
     "gatsby-transformer-sharp": "^2.7.0",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.1.1",
