--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.21",
     "@mdx-js/react": "^1.6.21",
-    "@weknow/gatsby-remark-codepen": "^0.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.6.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.5.0",
+    "gatsby-plugin-mdx-embed": "^0.0.17",
     "gatsby-plugin-sharp": "^2.9.0",
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-remark-images": "^3.6.0",
     "gatsby-source-filesystem": "^2.6.1",
     "gatsby-transformer-remark": "^2.12.0",
     "gatsby-transformer-sharp": "^2.7.0",
+    "mdx-embed": "^0.0.17",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.1.1",
     "react": "^16.12.0",
