--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-mdx-embed": "^0.0.17",
+    "gatsby-plugin-nprogress": "^2.9.0",
     "gatsby-plugin-sharp": "^2.9.0",
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-remark-images": "^3.6.0",
