--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mdx": "^1.5.0",
     "gatsby-plugin-mdx-embed": "^0.0.17",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sharp": "^2.9.0",
+    "gatsby-plugin-sitemap": "^2.11.0",
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-remark-images": "^3.6.0",
     "gatsby-source-filesystem": "^2.6.1",
